tests/typecheck/bad/fun-prefix-underscore.scilexp
(* Don't allow identifiers that start with underscore because these might shadow the builtin variables.
   We make exception for identifiers that consist of exactly one underscore character (`_`) *)
fun (_prefixed_with_underscore : Int32) => Uint32 0